2007-08-13  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.
        
        <rdar://problem/5333725> -webkit-user-select: none makes selection difficult

        * editing/selection/5333725-expected.checksum: Added.
        * editing/selection/5333725-expected.png: Added.
        * editing/selection/5333725-expected.txt: Added.
        * editing/selection/5333725.html: Added.
        
        Added a workaround for a bug where -webkit-user-select:none
        has no effect on the body if placed on the html element:
        * editing/selection/select-all-user-select-none.html:

2007-08-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Maciej.

        <rdar://problem/5360748>
        REGRESSION (r21002-r21003): Flash widget sniffer doesn't work (affects iWeb)
        
        Update test case to handle the case where the node list is accessed after 
        the document has finished loading.
        
        * fast/dom/NodeList/invalidate-node-lists-when-parsing-expected.txt:
        * fast/dom/NodeList/invalidate-node-lists-when-parsing.html:

2007-08-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin and Sam.
        
        - test cases for <rdar://problem/5395213> cross-domain access to individual components of location object should be denied.

        * http/tests/security/cross-frame-access-location-expected.txt: This test's results changed, there are more debug messages due to access being legitimately denied.
        
        The remainder are new tests and support:

        * http/tests/security/resources/xss-DENIED-assign-location-hash-attacker.html: Added.
        * http/tests/security/resources/xss-DENIED-assign-location-host-attacker.html: Added.
        * http/tests/security/resources/xss-DENIED-assign-location-host-failure.html: Added.
        * http/tests/security/resources/xss-DENIED-assign-location-hostname-attacker.html: Added.