@@ -1,0 +1,14 @@
+ALERT: 22
+ALERT: 92
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x36
+        RenderText {#text} at (0,0) size 771x36
+          text run at (0,0) width 771: "This tests for a bug where the delete button wouldn't work because it had -webkit-user-select:none instead of -webkit-user-"
+          text run at (0,18) width 87: "select:ignore. "
+          text run at (87,18) width 450: "The list should be removed, the editable region below should be empty."
+      RenderBlock {DIV} at (0,52) size 784x32
+caret: position 0 of child 3 {DIV} of child 0 {BODY} of child 0 {HTML} of document
