@@ -1,3 +1,13 @@
+2007-08-14  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by Tim.
+
+        <rdar://problem/5408255> REGRESSION: In Mail, clicking the containing element's UI closebox doesn't delete element
+
+        * editing/DeleteButtonController.cpp:
+        (WebCore::DeleteButtonController::show): Use -webkit-user-select:ignore for
+        the deletion UI.
+
 2007-08-15  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Hyatt.
